--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Product</h1>
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<% content_for :header do %>
+    <section class="hero is-warning">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Editing Product
+          </h1>
+        </div>
+      </div>
+    </section>
+    <% end %>
+    
+    <div class="pv4">
+      <%= render 'form', product: @product %>
+    </div>
