--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,38 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Image</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<% content_for :header do %>
+  <section class="hero is-warning">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Browse the latest products on Shop
+        </h1>
+      </div>
+    </div>
+  </section>
+  <% end %>
+  
+  <div class="product-index-grid pt4">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.image %></td>
-        <td><%= product.description %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  
+      <div class="product border-light">
+        <div class="product-thumb">
+        <%= link_to image_tag(product.image_url(:thumb)), product %>
+      </div>
+  
+  
+      <div class="pa3">
+  
+        <h3 class="fw7 f4 title"><%= link_to product.name, product %></h3>
+  
+        <p class="has-text-gray fg pt1">Sold by <%= product.user.name %></p>
+  
+        <p class="f3 fw6 has-text-right pt2 price"><%= number_to_currency(product.price) %></p>
+  
+        <% if product_author(product) %>
+           <%= link_to 'Edit', edit_product_path(product), class: "button is-small" %>
+           <%= link_to 'Delete', product, method: :delete, data: { confirm: "Are you sure ?" }, class: "button is-small" %>
+        <% end %>
+  
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+</div>
